# rdf-generator

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  run.sh
.github/workflows/: ci_cd.yaml  remote.yaml  test-docker-push.yaml
.reuse/: REUSE.toml
LICENSES/: MIT.txt
configs/: config.yaml
data/examples/: minimal.json  minimal.nex  minimal_metadata.csv  reduced.nex  sp_reduced.json  species.json
data/ontologies/: phb.owl  pmck.owl
data/shapes/: phenotype_shapes.ttl  shapes.ttl
rdf_generator/: __init__.py  main.py
tests/: test_main.py
