# SPDX-FileCopyrightText: 2026 Thiago S. R. Silva, Diego S. Porto
# SPDX-License-Identifier: MIT

[project]
name = "rdf-generator"
version = "0.0.1"
description = "Generates RDF phenotype graphs from JSON and NEXUS matrices."
authors = [
    { name = "Thiago S. R. Silva", email = "thiago.sanchesranzanidasilva@helsinki.fi" },
    { name = "Diego S. Porto", email = "diego.sassoporto@helsinki.fi" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Main dependencies
dependencies = [
    "rdflib>=6.6",
    "dendropy>=4.6",
    "pyshacl>=0.20",
    "pygraphviz>=1.9",
    "dendropy>=4.6",
    "PyYAML>=6.0"
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=24.0",
    "isort>=6.0",
    "mypy>=1.5"
]

# Entry points for CLI
[project.scripts]
rdf-generator = "rdf_generator.main:main"

# Semantic Release configuration
[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
logging_use_named_masks = true
version_toml = ["pyproject.toml:project.version"]
version_variables = ["rdf_generator/__init__.py:__version__"]

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
  '''chore(?:\([^)]*\))?: .+''',
  '''ci(?:\([^)]*\))?: .+''',
  '''style(?:\([^)]*\))?: .+''',
  '''refactor(?:\([^)]*\))?: .+''',
  '''test(?:\([^)]*\))?: .+''',
  '''build(?:\([^)]*\))?: .+''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GH_TOKEN" }

[tool.setuptools.packages.find]
include = ["rdf_generator*"]
exclude = ["dev", "data", "outputs"]

# Build system
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
